[package]
name = "rpn-c"
description = "A calculator environment using Reverse Polish Notation and multiple precision numbers"
version = "0.2.1"
authors = ["alvise <alvisebruniera@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KayJay7/rpn-c"
keywords = ["rpn", "calculator", "math", "multiple-precision", "interpreter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
num-traits = "0.2"
ramp = "0.6.0"
rustyline = "9.0.0"
rustyline-derive = "0.4.0"
env_logger = "0.8.3"
directories = "3.0.2"
lazy_static = "1.4.0"
